--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     }
     async function main() {
       await liff.init({
-        liffId: "1657322888-Ee4zbwmv"
+        liffId: "1657341642-JrAwP2be"
       })
       if (!liff.isLoggedIn()) {
         liff.login()
